Update links. Fix wrapping on .math.inline.

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -563,6 +563,10 @@ figcaption {
   fill: #268bd2;
 }
 
+.math.inline {
+  white-space: nowrap;
+}
+
 /*---------- Source Code Table ----------*/
 #source_code_table_div {
   overflow-x: scroll;
